adding the reg and login api
