# routes/portfolio.js
@@ -1,4 +1,5 @@
 const express = require('express');
+const { Email } = require('../models/emails');
 const { OctagonMailschema } = require('../validations/octagonValidations');
 const { mailOptionsHelper } = require('./helpers/mailHelpers');
 var transporter = require('./helpers/transporter');
@@ -20,9 +21,22 @@ router.post('/sent-mail', async (req, res) => {
         OctagonMailschema.validate({});
         await OctagonMailschema.validateAsync(req.body);
         const transport = await transporter.sendMail(options);
-        return res.status(200).json({ success: true, message: `EMail sent successfull: ${transport.response}` })
+        const sentEmail = new Email(req.body);
+        await sentEmail.save();
+        return res.status(200).json({ success: true, message: `Email sent successfull: ${transport.response}` })
     } catch (error) {
-        return res.status(400).json({ success: false, message: `EMail sending Failled:${error.details[0].message}` })
+        console.log(error)
+        return res.status(400).json({ success: false, message: `Email sending Failled:${error.details[0].message}` })
     }
 })
+
+router.get('/mails', async (req, res) => {
+    try {
+        const emails = await Email.find();
+        return res.status(200).json({ success: true, message: `emails fatched succesful`, emails })
+    } catch (error) {
+        res.status(404).send({ message: 'stocks Not Found' });
+    }
+})
+
 module.exports = router;
